Added validation for model fields.

--- a/src/main/webapp/WEB-INF/views/userform.html
+++ b/src/main/webapp/WEB-INF/views/userform.html
@@ -44,14 +44,14 @@
 
     <label for="name">Имя:</label>
     <input type="text" id="name" th:field="*{name}" required />
+    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="error"></span>
 
     <label for="lastName">Фамилия:</label>
     <input type="text" id="lastName" th:field="*{lastName}" required />
+    <span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}" class="error"></span>
 
     <button type="submit">Сохранить</button>
     <a href="/users" class="back-link" >Вернуться к списку пользователей</a>
 </form>
-
-
 </body>
 </html>
